--- a/pet_dog/build.gradle
+++ b/pet_dog/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(path: ':pet_annotation')
     annotationProcessor project(path: ':pet_annotation_compiler')
-    implementation 'com.google.auto.service:auto-service:1.0-rc4'
+    compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
 
 }
