--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':pet_cat', ':pet_dog', ':pet_annotation', ':pet_annotation_compiler', ':zoo'
+include ':app', ':pet_cat', ':pet_dog', ':pet_annotation', ':pet_annotation_compiler', ':zoo', ':pet_register'
 rootProject.name='ServiceLoaderDemo'
