--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url(uri('./gradle-local'))
+        }
+
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        
+        classpath 'com.pet.register:pet_register:1.0.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,7 +24,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        maven {
+            url uri('./gradle-local')
+        }
+
     }
 }
 
