--- a/pet_register/build.gradle
+++ b/pet_register/build.gradle
@@ -1,20 +1,24 @@
-
-
-//plugins {
-//    id 'java-gradle-plugin'
-//    id 'groovy'
-//}
 apply plugin:'groovy'
 apply plugin:'maven'
+
 
 //sourceCompatibility = 1.8
 repositories {
     mavenCentral()
+    google()
+    jcenter()
+
 }
 
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
+}
+
+dependencies {
+    implementation 'com.android.tools.build:gradle:3.1.4'
+    implementation 'com.android.tools.build:gradle-api:3.1.4'
+
 }
 
 group='com.pet.register'
@@ -27,3 +31,4 @@ uploadArchives{
         }
     }
 }
+
