--- a/pet_register/build.gradle
+++ b/pet_register/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation 'com.android.tools.build:gradle:3.1.4'
     implementation 'com.android.tools.build:gradle-api:3.1.4'
 
+//    implementation 'org.ow2.asm:asm:5.1'
+//    implementation 'org.ow2.asm:asm-commons:5.1'
+
 }
 
 group='com.pet.register'
